# UAVRouter

./: .gitignore  README.md
UAVRouter/: ChangePoints.txt  (+51 more)
UAVRouter/niGeom/: CMakeLists.txt
UAVRouter/niGeom/niGeom/: niArrayT.h  niBlob.h  niRefCounter.h  niSmartRefT.h  niTypes.h
UAVRouter/niGeom/niGeom/algorithm/: niAlgorithm.h  niBinaryInsertSort.h  niBstTree.h  niBubbleSort.h  niHashTable.h
UAVRouter/niGeom/niGeom/geometry/: dsPolyMesh3dTopo.h  niBBox2d.h  niBBox3d.h  niCurve2d.h  niCurve3d.h  niDecompose2d.h  niGeom2dTypes.h  niGeom3dTypes.h  niGeomDef.h  niGeomMath2d.h  niGeomMath3d.h  niLine2d.h  niLine3d.h  niPolyMesh3d.h  niPolygon2d.h  niPolygon2dFn.h  niPolygon3d.h  niTexCoord.h  niTriMesh2d.h  niTriMesh2dFn.h  niTriMesh2dTopo.h  niTriMesh3d.h  niTriMesh3dTopo.h  niTriangle2d.h  niTriangle2dFn.h  niTriangle3d.h  niTriangulation2d.h
UAVRouter/niGeom/niGeom/geometry/tree/: niBspTree.h  niBvhTree.h  niKdTree.h  niTreeTypes.h
UAVRouter/niGeom/niGeom/math/: niMath.h  niMatrix22.h  niMatrix33.h  niMatrix34.h  niMatrix44.h  niPolar2d.h  niQuat3d.h  niRotate3d.h  niScale3d.h  niTrans3d.h  niVector2d.h  niVector3d.h  niVector4d.h
UAVRouter/niGeom/source/: niBspTree.cpp  niBvhTree.cpp  niCurve2d.cpp  niCurve3d.cpp  niDecompose2d.cpp  niGeomMath2d.cpp  niGeomMath3d.cpp  niKdTree.cpp  niMatrix33.cpp  niMatrix34.cpp  niMatrix44.cpp  niPolyMesh3d.cpp  niPolygon2d.cpp  niPolygon2dFn.cpp  niPolygon3d.cpp  niRefCounter.cpp  niTriMesh2d.cpp  niTriMesh2dFn.cpp  niTriMesh2dTopo.cpp  niTriMesh3d.cpp  niTriMesh3dTopo.cpp  niTriangle2dFn.cpp  niTriangulation2d.cpp
(+6 files in other folders)
